--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
     <div class="extra-container">
         <div class="experience__tittle">
             <div class="experience__tittle1"><h1>Porto Alegre & Igrejinha | RS</h1></div>
-            <h3 id="counting" class="tittle-eff2">CONFERÊNCIAS</h3>
+            <h3 id="counting" class="tittle-eff2">Conferências</h3>
             <div class="experience__tittle2"><h1>Julho & Agosto | 2020</h1></div>
         </div>
     </div>
