--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <li><a class="menu-link link--kukuri" href="index.html" data-letters="Home">Home</a></li>
                 <li><a class="menu-link link--kukuri" href="movimento.html" data-letters="O Movimento">O Movimento</a></li>
                 <li><a class="menu-link link--kukuri" href="lideres.html" data-letters="Líderes">Líderes</a></li>
-                <li><a class="menu-link link--kukuri" href="venue.html" data-letters="Conferênicas">Conferênicas</a></li>
+                <li><a class="menu-link link--kukuri" href="venue.html" data-letters="Conferências">Conferências</a></li>
                 <li><a class="menu-link link--kukuri" href="contact.html" data-letters="Contato">Contato</a></li>
                 
                 
